# qr_code_print

./: .gitignore  Cargo.toml  README.md  build.sh  data.csv  place.json  settings.json
.claude/: settings.local.json
.github/workflows/: release.yml
example/: base.af  data.csv  settings.json  test_ascii.csv
examples/: create_base_pdf.rs
materials/: logo.af
src/: config.rs  main.rs
src/pdf/: content.rs  document.rs  fonts.rs  mod.rs  resources.rs
