[package]
name = "qr_code_print"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
printpdf = "0.7"
lopdf = "0.34"
anyhow = "1.0"
flate2 = "1.0"
fontdb = "0.23"
ttf-parser = "0.25"
clap = { version = "4.5", features = ["derive"] }
